<resources>
    <string name="app_name">miTienda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_salir">Cerrar Sesión</string>
    <string name="menu_mis_ventas">Mis Ventas</string>
    <string name="menu_vender">Vender</string>
    <string name="menu_miscitas">Mis Citas</string>
    <string name="title_activity_registrar_usuario">registrarUsuario</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_registrar_producto">registrarProducto</string>

</resources>
