<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_vender"
            android:icon="@drawable/store"
            android:title="@string/menu_vender" />
        <item
            android:id="@+id/nav_mis_ventas"
            android:icon="@drawable/register"
            android:title="@string/menu_mis_ventas" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/login"
            android:title="@string/menu_salir" />
    </group>

    <item android:title="Mas">
        <menu>
            <item
                android:id="@+id/nav_citas"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_miscitas" />

        </menu>
    </item>

</menu>
